--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,7 @@
 @use '$lib/styles/typography';
 @use '$lib/styles/variables';
 @use '$lib/styles/main'; // Ensure this imports variables, typography, etc.
-@use 'lib/styles/katex-custom'; // Import the KaTeX overrides
+// @use 'lib/styles/katex-custom';
 // Import Google Fonts
 // @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap'); // Added for Headers
